styling and text

--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -3,10 +3,15 @@ page-forgot-password {
 		text-align: center;
 	}
 
-	.onboarding-logo{
-		width: 60px;
-		height: 60px;
-		margin-bottom: 60px;
-		margin-top: 100px;
+	.help-text {
+		font-size: 12px;
+		color: lightslategrey;
+
+		position: relative;
+		margin-bottom: 40px;
+	}
+	.submit-button-container {
+		position:relative;
+		margin-top:100%;
 	}
 }
