--- a/src/pages/create-account/create-account.scss
+++ b/src/pages/create-account/create-account.scss
@@ -1,3 +1,13 @@
 page-create-account {
 
+
+	ion-col {
+		text-align: center;
+	}
+	.create-account-logo{
+		width: 60px;
+		height: 60px;
+		margin-bottom: 60px;
+		margin-top: 100px;
+	}
 }
